# ftw-patch

./: .gitattributes  .gitignore  .readthedocs.yaml  Api_json_exporter_Makefileziele.md  Api_json_exporter_configuration.md  Makefile  NOTICE  README.md  gemini_spec.md  git_diff.txt  pyproject.toml  tox.ini
.github/workflows/: ci.yml
de_docs/: gs_protocols.rst
doc/: Makefile
doc/source/: about.rst  api_json_exporter.py  changelog.rst  conf.py  extern_packages.rst  index.rst  license.rst  roadmap.rst  verbosity_levels.rst
doc/source/_static/: colors.css  custom.css  custom_epub.css  custom_nefertiti_html.css  fonts.css  ui_elements.css  ui_shared.css
doc/source/_templates/autosummary/: class_extended.rst  module_extended.rst  package.rst
doc/source/devel/: debug_patcher.rst  ftw_baselib_module.rst  ftw_develtool_module.rst  ftw_patch_module.rst  get_started_base.rst  get_started_container.rst  get_started_exceptions.rst  get_started_ftw_converter.rst  get_started_ftw_patch.rst  get_started_ftw_patch_old.rst  get_started_ftw_testinfra.rst  get_started_lines.rst  get_started_parser.rst  get_started_patcher.rst  get_started_protocols.rst  get_started_static.rst  get_started_utils.rst
doc/source/devel/api/: ftw.patch.ftw_patch.FileLine.rst  ftw.patch.ftw_patch.FtwPatch.rst  ftw.patch.ftw_patch.Hunk.rst  ftw.patch.ftw_patch.HunkContentData.rst  ftw.patch.ftw_patch.HunkLine.rst  ftw.patch.ftw_patch.PatchParser.rst  ftw.patch.ftw_patch.rst  ftw_patch.ftw_patch.FileLine.rst  ftw_patch.ftw_patch.FtwPatch.rst  ftw_patch.ftw_patch.Hunk.rst  ftw_patch.ftw_patch.HunkContentData.rst  ftw_patch.ftw_patch.HunkLine.rst  ftw_patch.ftw_patch.PatchParser.rst  ftw_patch.ftw_patch.rst
doc/source/devel/api_inc/modules/: fitzzftw.baselib.converter_moduleinc.rst.inc  fitzzftw.develtool.testinfra_moduleinc.rst.inc  ftw.baselib.converter_moduleinc.rst.inc  ftw.develtool.testinfra_moduleinc.rst.inc
doc/source/devel/testhome/testinput/: app_old_config.py  changes_create.diff  changes_delete.diff  changes_multi.diff  changes_multi_delete.diff  complex.patch  config.py  del_test.diff  example_git-diff-one-hunk.diff  example_git-diff-two-hunks.diff  hello.py  main.py  patch_config.toml  simple.diff  test_pyproject.toml
doc/source/devel/testhome/testoutput/: app.py  app.py.orig  changes.diff  hello.py  pyproject.toml  test.patch
doc/source/user/: configuration.rst  use_ftwpatch.rst  use_ftwpatch_post.rst.inc  use_ftwpatch_pre.rst.inc
src/fitzzftw/develtool/: testinfra.py
src/fitzzftw/patch/: __init__.py  _version.py  base.py  cli.py  container.py  exceptions.py  ftw_patch.py  lines.py  parser.py  patcher.py  protocols.py  static.py  utils.py
src/ftw/baselib/: converter.py
src/ftw/develtool/: testinfra.py
src/ftw/patch/: __init__.py  ftw_patch.py
src/ftw_patch/: __init__.py  ftw_patch.py
tests/: test_DiffCodeFile.py  test_FileLine.py  test_FtwPatch.py  test_HeadLine.py  test_Hunk.py  test_HunkHeadLine.py  test_HunkLine.py  test_PatchLine.py  test_PatchParser.py  test_application.py  test_cli_prog.py  test_coverage_fix.py  test_coverage_hunks.py  test_exceptions.py  test_ftw_functions.py  test_import.py  test_parser.py  test_utils.py
tests_legacy/: test_cli_prog.py  test_coverage_hunks.py  test_parser.py  test_utils.py
