[build-system]
requires = ["setuptools>=61.0", "setuptools-scm>=8.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools_scm]
write_to = "src/ftw_patch/_version.py"

[project]
name = "ftw-patch"
dynamic = ["version"]
description = "Ein Unicode resistenter Ersatz f端r patch."
readme = "README.md"

[project.scripts]
ftwpatch = "ftw_patch.ftw_patch:prog_ftw_patch"

[project.optional-dependencies]
doc =[
    "sphinx",
    "sphinx-argparse",
    "sphinx-autodoc-annotation",
    "autoclasstoc",
    "python-docs-theme",
    "sphinxcontrib-mermaid",
    "sphinxcontrib-plantuml",
    "sphinx-copybutton",
    "sphinx-rtd-theme",
    "sphinx-design",
]
test=[
    "pytest",
    "pytest-mock",
    "pytest-cov",
]
lint=["ruff",]
dev = [
    "ftw_patch[test,doc,lint]",
]


[[project.authors]]
name = "Fitzz TeXnik Welt"
email = "FitzzTeXnikWelt@t-online.de"


[[project.maintainers]]
name = "Fitzz TeXnik Welt"
email = "FitzzTeXnikWelt@t-online.de"

[tool.distutils.egg_info]
egg_base = "."

[tool.ruff]
src = ["src"]
line-length = 88

[tool.ruff.lint]
# E/W = Pycodestyle (Standard-Fehler/Warnungen)
# F = Pyflakes (Logik-Fehler wie ungenutzte Imports)
# I = isort (Sortierung der Imports)
# B = flake8-bugbear (findet potenzielle Design-Fehler)
select = ["E", "W", "F", "I", "B"]
ignore = []

[tool.ruff.lint.isort]
known-first-party = ["ftw"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.pytest.ini_options]
# Pytest-Optionen f端r die Testausf端hrung
minversion = "7.0"
addopts = "--doctest-glob=get_started_*.rst"
testpaths = [
    "doc/source/devel", # Durchsucht Ihr Dokumentationsverzeichnis nach .rst-Dateien
    "tests",            # Durchsucht das Unit-Test-Verzeichnis (f端r test_*.py)
]

[tool.coverage.run]
omit = [
    "src/ftw_patch/_version.py",
]



#