[build-system]
requires = ["setuptools>=61.0", "setuptools-scm>=8.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
include-package-data = true
[tool.setuptools.package-dir]
"" = "src"
[tool.setuptools.packages.find]
where = ["src"]
include = ["ftw*"]
namespaces = true

[tool.setuptools_scm]
write_to = "src/ftw/patch/_version.py"

[project]
name = "ftw-patch"
dynamic = ["version"]
description = "Ein Unicode resistenter Ersatz f端r patch."
readme = "README.md"
requires-python = ">=3.11"
dependencies = ["platformdirs"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Build Tools",
    "Topic :: Text Processing :: Filters",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Programming Language :: Python :: 3.15",
    "Operating System :: OS Independent",
]


[project.urls]
Homepage = "https://github.com/fitzz-ftw/ftw-patch"
Documentation = "https://github.com/fitzz-ftw/ftw-patch#readme"
Repository = "https://github.com/fitzz-ftw/ftw-patch.git"
Issues = "https://github.com/fitzz-ftw/ftw-patch/issues"


[project.scripts]
ftwpatch = "ftw.patch.ftw_patch:prog_ftw_patch"


[project.optional-dependencies]
doc = [
    "sphinx",
    "sphinx-argparse",
    "sphinx-autodoc-annotation",
    "autoclasstoc",
    "python-docs-theme",
    "sphinxcontrib-mermaid",
    "sphinxcontrib-plantuml",
    "sphinx-copybutton",
    "sphinx-rtd-theme",
    "sphinx-design",
]
test = ["pytest", "pytest-mock", "pytest-cov"]
lint = ["ruff"]
dev = ["ftw-patch[test,doc,lint]",
    "esbonio==0.16.5",
    ]


[[project.authors]]
name = "Fitzz TeXnik Welt"
email = "FitzzTeXnikWelt@t-online.de"


[[project.maintainers]]
name = "Fitzz TeXnik Welt"
email = "FitzzTeXnikWelt@t-online.de"

[tool.distutils.egg_info]
egg_base = "."

[tool.ruff]
src = ["src"]
line-length = 100
exclude = ["pyproject.toml"]

[tool.ruff.lint]
# E/W = Pycodestyle (Standard-Fehler/Warnungen)
# F = Pyflakes (Logik-Fehler wie ungenutzte Imports)
# I = isort (Sortierung der Imports)
# B = flake8-bugbear (findet potenzielle Design-Fehler)
select = ["E", "W", "F", "I", "B"]
ignore = ["W293", "W291", "B904"]

[tool.ruff.lint.isort]
known-first-party = ["ftw"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.pytest.ini_options]
# Pytest-Optionen f端r die Testausf端hrung
minversion = "7.0"
addopts = "--doctest-glob=get_started_*.rst"
testpaths = [
    "doc/source/devel", # Durchsucht Ihr Dokumentationsverzeichnis nach .rst-Dateien
    "tests",            # Durchsucht das Unit-Test-Verzeichnis (f端r test_*.py)
]

[tool.coverage.run]
source = ["ftw.patch"]
branch = true
omit = ["**/_version.py"]

[tool.coverage.report]
show_missing = true
fail_under = 100

#
